--- a/plan/plan202506202225.md
+++ b/plan/plan202506202225.md
@@ -12,8 +12,8 @@
 - [x] 修改后端API，在返回套利机会数据时计算并包含fundingProfit字段
 - [x] 更新前端代码，使用后端返回的fundingProfit数据
 - [x] 移除前端冗余的计算函数
-- [ ] 重新构建Docker镜像并测试部署
-- [ ] 验证功能正确性
+- [x] 重新构建Docker镜像并测试部署
+- [x] 验证功能正确性
 
 ## 技术实施方案
 1. 后端实现：
